# FlinkCommerce

./: docker-compose.yml  flink_kafka_consumer.py  flink_kafka_postgres_elastic.py  main.py  pyproject.toml
